<resources>
    <string name="app_name">RezerveGaldinu</string>
    <string name="rezerve_galdinu">Rezervē Galdiņu</string>
    <string name="EsmuLietotajs">Esmu Lietotājs</string>
    <string name="IzveidotProfilu">Izveidot Profilu</string>
    <string name="reserveTable">Rezervējiet savu galdiņu vienkārši!</string>
    <string name="pieteikties">Pieteikties</string>
    <string name="parole_hint">Parole</string>
    <string name="epasts_hint">E-pasts</string>
    <string name="loginTitle">Pieteikties ar esošu lietotāju</string>
    <string name="noProfileRegister">Nav profila? Reģistrējies</string>
    <string name="register">Reģistrēties</string>
    <string name="telefons">Telefons</string>
    <string name="repeat_password">Atkārtota parole</string>
    <string name="email">E-pasts</string>
    <string name="password">Parole</string>
    <string name="name">Vārds</string>
    <string name="bookTable">Rezervēt Galdiņu</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurantname">RestaurantName</string>
    <string name="address">Address</string>
    <string name="reserveName">Galdiņš tiks rezervēts uz Vārds vārdu</string>
    <string name="Cancel">Atcelt</string>
    <string name="book">Rezervēt</string>
    <string name="datums">Datums:</string>
    <string name="_20_06_2023">20.06.2023</string>
    <string name="cilveki">Cilvēki:</string>
    <string name="_4">4</string>
    <string name="back">Atpakaļ</string>
</resources>